package com.korus.core.domain 
 enum class TransactionType(){
    INCOME
    EXPENSE
 }